# Chimara

./: .gitignore  .ignore  .svnignore  .travis.yml  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  aclocal.m4  autogen.sh  chimara-plugin.pc.in  chimara.pc.in  chimara.spec  chimara.spec.in  configure.ac  index.html  meson.build  meson_options.txt  plugin.map
api/: ChimaraGlk.html  annotation-glossary.html  api-index.html  chimara-A-Note-on-Display-Style.html  chimara-A-Note-on-Unicode-Case-Folding-and-Normalization.html  chimara-Accepting-Hyperlink-Events.html  chimara-Basic-Types.html  chimara-Blorb-Errors.html  chimara-Changing-Window-Constraints.html  chimara-Character-Encoding.html  chimara-Character-Input-Events.html  chimara-Character-Input.html  chimara-Closing-Streams.html  chimara-Conventions-of-This-Document.html  chimara-Creating-Hyperlinks.html  chimara-Creating-and-Destroying-Sound-Channels.html  chimara-Credits.html  chimara-Dispatching.html  chimara-Echo-Streams.html  chimara-Events.html  chimara-Exiting-Your-Program.html  chimara-File-References.html  chimara-Functions-the-Library-Must-Provide.html  chimara-Gargoyle-Extensions.html  chimara-Getting-Argument-Prototypes.html  chimara-Glk-and-the-Virtual-Machine.html  chimara-Going-Outside-the-Glk-API.html  chimara-Graphics-in-Graphics-Windows.html  chimara-Graphics-in-Text-Buffer-Windows.html  chimara-How-to-Print.html  chimara-How-to-Read.html  chimara-Image-Resources.html  chimara-Interrogating-the-Interface.html  chimara-Introduction.html  chimara-Line-Input-Events.html  chimara-Line-Input.html  chimara-Mouse-Input-Events.html  chimara-Opaque-Objects.html  chimara-Other-API-Conventions.html  chimara-Other-Events.html  (+61 more)
babel/: Makefile.am  babel  babel-makefile  modules.h.gch
build-aux/: build-deb.sh  build-rpm.sh  meson_post_install.py
bundle/: Info-chimara.plist  chimara.bundle  launcher.sh
client/: chimara.ui  error.h  main.c
css/: bootstrap-theme.css  bootstrap-theme.min.css  bootstrap.css  bootstrap.min.css  style.css
debian/: .gitignore  .svnignore  README.Debian  changelog  chimara-player.install  control  copyright  docs  info  libchimara-dev.install  libchimara-doc.doc-base  libchimara-doc.info  libchimara-doc.install  libchimara0.install  (+3 more)
docs/reference/: .gitignore  .svnignore  Makefile.am  blorb-library.sgml  blorb.sgml  build-selector-table.pl.in  chimara-docs.sgml  chimara-sections.txt  chimara.types  dispatch-selectors.sgml  dispatch.sgml  glk-api-conventions.sgml  glk-character-encoding.sgml  glk-display-style.sgml  glk-front-matter.sgml  glk-introduction.sgml  glk-line-input.sgml  glk-main-function.sgml  glk-normalization.sgml  glk-other-events.sgml  glk-output.sgml  glk-porting.sgml  glk-sound-resources.sgml  glk-window-arrangement.sgml  glk-windows.sgml  meson.build
interpreters/: Makefile.am  bocfel.patch  bocfel.plugin  chimara-bocfel-plugin.c  chimara-bocfel-plugin.h  chimara-frotz-plugin.c  chimara-frotz-plugin.glade  chimara-frotz-plugin.h  chimara-git-plugin.c  chimara-git-plugin.h  chimara-glulxe-plugin.c  chimara-glulxe-plugin.h  chimara-nitfol-plugin.c  chimara-nitfol-plugin.h  frotz.patch  frotz.plugin  git.patch  git.plugin  glulxe.plugin  nitfol.patch  nitfol.plugin
interpreters/bocfel/: Makefile.am  glkstart.c  io.c  meson.build  screen.c  util.c  zterp.c
interpreters/frotz/: .gitignore  Makefile.am  fastmem.c  files.c  glkfrotz.h  main.c  meson.build  quetzal.c
interpreters/git/: .gitignore  Makefile.am  README.txt  config.h  git.h  git_unix.c  glkop.c  meson.build  terp.c
interpreters/glulxe/: .gitignore  Makefile.am  meson.build  profile-analyze.py  unixstrt.c
interpreters/nitfol/: .gitignore  .svnignore  Makefile.am  blorb.c  inform.c  io.c  main.c  meson.build  nitfol.h  nitfol.info  nitfol.opt  no_blorb.c  opt2glkc.pl  startdos.c  startunix.c  y2help.pl
libchimara/: .gitignore  .svnignore  Makefile.am  abort.c  abort.h  case.c  charset.c  chimara-glk-private.h  chimara-glk.c  chimara-glk.h  chimara-if.c  chimara-if.h  chimara-marshallers.txt  chimara.vapi  datetime.c  dispatch.c  doc.c  event.c  event.h  fileref.c  fileref.h  garglk.c  garglk.h  gestalt.c  gi_blorb.c  glk.c  glk.h  glkunix.c  glkunix.h  graphics.c  graphics.h  hyperlink.c  hyperlink.h  image.c  init.c  init.h  input.c  input.h  magic.c  magic.h  (+35 more)
player/: .gitignore  .svnignore  Makefile.am  actions.c  actions.h  app.c  app.h  browser.c  browser.h  browser.menus  callbacks.c  callbacks.h  chimara.menus  chimara.menus.in  chimara.ui  config.py.in  error.c  error.h  iliad.c  main.c  meson.build  org.chimara-if.gschema.xml  player.c  player.h  player.menus  player.py  preferences.c  preferences.h  style.css  util.c  util.h
player/resources/: chimara.ui  org.chimara-if.player.gresource.xml
player/resources/gtk/: menus.ui
src/: .svnignore  Makefile  Makefile.am  abort.c  abort.h  callbacks.c  callbacks.h  case.c  charset.c  charset.h  chimara-glk-private.h  chimara-glk.c  chimara-glk.h  chimara.glade  doc.c  event.c  event.h  fileref.c  fileref.h  first.c  gargoyle-gtk.glade  gestalt.c  glk.c  glk.h  gridtest.c  input.c  input.h  magic.h  main.c  model.c  resource.h  splittest.c  stream.c  stream.h  strio.c  style.c  style.h  timer.h  window.c  window.h
tests/: .gitignore  .svnignore  Aotearoa.gblorb  Makefile.am  Sound Test.gblorb  babeltest.c  barf-eventbox.c  barf.c  barf.c.eventbox  callbacks.c  callbacks.h  chimara.menus  chimara.ui  cssparse.c  csstest.c  fileio.c  first.c  glkunit-runner.c  glulxercise-runner.c  glulxercise.c  glulxercise.ui  gridtest.c  iliad.c  keycode.c  loremipsum.txt  lsan.supp  main.c  meson.build  model.c  multiwin.c  plugin-loader.c  plugin-utils.c  plugin-utils.h  reftest-compare.c  reftest-runner.c  soundtest.c  splittest.c  style.css  styletest.c  test-close.c  (+4 more)
tests/dtrace/: list_glk_calls.d  readme.txt
tests/reftest/: zero-height-window.c  zero-width-window.c
tests/unit/: Makefile.am  datetime.c  glkunit.c  glkunit.h  graphchar.c  io.c  stream.c  window.c
tests/unit/resource/: README.md  minifile.aiff  unittest.blorb  unittest.blurb
(+18 files in other folders)
