noinst_LTLIBRARIES = libbabel.la libifiction.la libbabel_functions.la

libbabel_la_SOURCES = babel_handler.c \
				   register.c \
				   misc.c \
				   md5.c \
				   zcode.c \
				   magscrolls.c \
				   blorb.c \
				   glulx.c \
				   hugo.c \
				   agt.c \
				   level9.c \
				   executable.c \
				   advsys.c \
				   tads.c \
				   tads2.c \
				   tads3.c \
				   adrift.c \
				   alan.c \
				   babel.h \
				   babel_handler.h \
				   md5.h \
                   modules.h \
			   	   tads.h \
				   treaty_builder.h \
				   treaty.h

libifiction_la_SOURCES = ifiction.c ifiction.h \
					  register_ifiction.c

libbabel_functions_la_SOURCES = babel_story_functions.c \
							 babel_ifiction_functions.c \
							 babel_multi_functions.c

-include $(top_srcdir)/git.mk
